[package]
name = "loutre"
version = "1.0.0"
authors = ["Rodolphe Bréard <rbreard@cnil.fr>"]
edition = "2021"
description = "Outil de calcul des empreintes des pièces."
license = "CECILL-2.1"
publish = false
build = "build.rs"

[package.metadata.winres]
LegalCopyright = "Commission nationale de l’informatique et des libertés (CNIL)"

[dependencies]
dirs = { version = "5.0.1", default-features = false }
eframe = "0.27.2"
egui_extras = { version = "0.27.2", default-features = false, features = ["all_loaders"] }
fluent = { version = "0.16.0", default-features = false }
humansize = { version = "2.1.3", default-features = false }
image = { version = "0.25.1", default-features = false, features = ["png", "ico"] }
msg_parser = { version = "0.1.1", default-features = false }
nom = { version = "7.1.3", default-features = false, features = ["std"] }
rfd = "0.14.1"
serde = { version = "1.0.197", default-features = false, features = ["std"] }
serde_derive = { version = "1.0.197", default-features = false }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
unic-langid = { version = "0.9.4", default-features = false }
unicode-normalization = { version = "0.1.23", default-features = false, features = ["std"] }

sha2 = { version = "0.10.8", default-features = false, features = ["std"] }
sha3 = { version = "0.10.8", default-features = false, features = ["std"] }
blake2 = { version = "0.10.6", default-features = false, features = ["std"] }
blake3 = { version = "1.5.1", default-features = false, features = ["std", "rayon"] }

[target.'cfg(target_env = "msvc")'.dependencies]
arboard = { version = "3.3.2", default-features = false, features = ["windows-sys"] }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
arboard = { version = "3.3.2", default-features = false, features = ["wayland-data-control", "wl-clipboard-rs"] }

[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1", default-features = false }

[profile.release]
strip = "symbols"
codegen-units = 1
panic = "abort"
# It is far better to use the "thin" LTO instead of the "fat" one,
# however Thin-LTO is broken on windows-MSVC. This setting should
# be switched to "thin" as soon as this bug is fixed.
#
# ThinLTO:
#  - https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
# Bug:
#  - https://github.com/rust-lang/rust/issues/109114
#  - https://github.com/rust-lang/rust/issues/109067
#  - https://github.com/rust-lang/rust/pull/109094
lto = "fat"
