[package]
name = "loutre"
version = "3.0.0-beta.2"
authors = ["Rodolphe Bréard <rbreard@cnil.fr>"]
edition = "2021"
description = "Outil de calcul des empreintes des pièces."
license = "EUPL-1.2"
publish = false
build = "build.rs"

[package.metadata.winres]
LegalCopyright = "Commission nationale de l’informatique et des libertés (CNIL)"

[features]
default = []
nightly = []

[dependencies]
blake2 = { version = "0.10.6", default-features = false, features = ["std"] }
blake3 = { version = "1.5.4", default-features = false, features = ["std", "rayon"] }
dioxus = { version = "0.7.1", features = ["desktop", "router"] }
dioxus-i18n = "0.5.0"
dirs = { version = "6.0.0", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
humansize = { version = "2.1.3", default-features = false }
minijinja = "2.5.0"
msg_parser = { version = "0.1.1", default-features = false }
nom = { version = "8.0.0", default-features = false, features = ["std"] }
rayon = { version = "1.10.0", default-features = false }
serde = { version = "1.0.213", default-features = false, features = ["std"] }
serde_derive = { version = "1.0.213", default-features = false }
sha2 = { version = "0.10.8", default-features = false, features = ["std"] }
sha3 = { version = "0.10.8", default-features = false, features = ["std"] }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
tokio = { version = "1.41.0", default-features = false, features = ["sync"] }
toml = { version = "0.9.5", default-features = false, features = ["display", "parse", "serde", "std"] }
tracing = { version = "0.1.41", default-features = false }
unic-langid = { version = "0.9.5", default-features = false }
unicode-normalization = { version = "0.1.24", default-features = false, features = ["std"] }
uuid = { version = "1.11.0", default-features = false, features = ["std", "fast-rng", "v4"] }
walkdir = { version = "2.5.0", default-features = false }

[target.'cfg(target_env = "msvc")'.dependencies]
arboard = { version = "3.4.1", default-features = false, features = ["windows-sys"] }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
arboard = { version = "3.4.1", default-features = false, features = ["wayland-data-control", "wl-clipboard-rs"] }

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.17", default-features = false }

[build-dependencies]
base64 = "0.22.1"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
